refine panel style and fix a little bug where the margin remained on the first panel on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -569,31 +569,24 @@ h2 {
 }
 
 .panel-container div {
-  border-radius: 28px;
+  border-radius: 24px;
   margin-bottom: 18px;
-  width: 300px;
+  max-width: 260px;
   transition-duration: .3s;
+  padding: 14px 20px 20px 20px;
 }
 
 .panel-container div:first-child {
   margin-right: 18px;
 }
 
-.panel-container div:hover {
-  box-shadow: 0 5px 10px rgba(0,0,0,.3);
-  transform: translateY(-2px);
-}
-
 .panel-title {
-  margin-left: 24px;
-  margin-top: 18px;
-  margin-bottom: 0;
+  margin: 0;
   color: rgb(245, 245, 245);
 }
 
 .panel-text {
-  margin: 24px;
-  margin-top: 4px;
+  margin: 0;
   text-align: left;
   color: rgb(245, 245, 245);
 }
@@ -615,11 +608,14 @@ h2 {
     grid-template-columns: auto auto;
   }
   .panel-container div {
-    width: 100%;
+    max-width: 100%;
     margin-right: 0;
   }
   .panel-container-margins {
-    margin: 40px;
+    margin: 20px;
+  }
+  .panel-container div:first-child {
+    margin-right: 0;
   }
 }
 
@@ -632,7 +628,7 @@ h2 {
     margin-right: 0;
   }
   .panel-container-margins {
-    margin: 40px;
+    margin: 20px;
   }
 }
 
